Updated work experience

--- a/index.html
+++ b/index.html
@@ -62,25 +62,28 @@
   <div class="container">
     <h5><span class="color-orange"><b>Software Engineer</b></span> @ Optum Financial</h5>
     <p>May 2021 &dash; Current</p>
-    <li>Design and implement custom software solutions to onboard new clients to achieve revenue goals</li>
-    <li>Modernize legacy applications to improve security, reliability and scalability of systems</li>
-    <li>Provide support for Account Executives, Production Support, and Call Center teams by resolving reported failures</li>
-    <li>Develop and support tools for Production Support, Implementation, and QA departments</li>
+    <li>Design and implement custom software solutions to onboard new clients to achieve revenue goals
+      such as building or extending file parsers, provider remittance advices, and other interconnected modules</li>
+    <li>Modernize legacy applications to improve security, reliability, and scalability of systems</li>
+    <li> Provide support for Account Executives, Production Support, and Call Center teams by resolving reported
+      failures in a timely manner</li>
+    <li>Develop and maintained tools and frameworks for Production Support, Implementation, and QA
+      departments</li>
     <li>Collaborate with Product Owners, DevOps, Architect, and other Engineers to discuss new solutions</li>
     <li>Train new team members on current systems ensuring they are self-reliant and resourceful</li>
 
-    <h5><span class="color-orange"><b>QA Engineer</b></span> @ Optum Financial</h5>
+    <h5><span class="color-orange"><b>Senior QA Automation Engineer</b></span> @ Optum Financial</h5>
     <p>March 2019 &dash; May 2021</p>
-    <li>Performed end-to-end testing verifying Python and .NET applications, web services, as well as MySQL, MS SQL, and IBM DB2/iSeries table updates</li>
-    <li>Led coordination of testing efforts in staging and production environments by collaborating with stakeholders</li>
-    <li>Automated testing processes with Python/Selenium apps, the .NET/SpecFLow framework, and bash scripts</li>
+    <li>Automated testing processes with Python/Selenium, the C#/.NET/SpecFLow framework, and bash scripting</li>
+    <li>Performed end-to-end testing verifying Python and .NET applications, web services, as well as MySQL, MS
+      SQL, and IBM DB2/iSeries table updates</li>
+    <li>Led testing efforts in staging and production environments by collaborating with stakeholders</li>
 
     <h5><span class="color-orange"><b>Treasury Automation Specialist</b></span> @ Optum Financial</h5>
     <p>March 2017 &dash; March 2019</p>
     <li>Significantly reduced department labor costs by automating accounting operations</li>
     <li>Programmed software to balance MasterCard's data sets against internal iSeries database records</li>
     <li>Automated report generation in Tableau to aggregate data spanning different DBs and external files</li>
-    <li>Trained others on my scripts to automate day-to-day operations and reduce hours of manual labor</li>
   </div>
 </div>
 
