--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <li><a href="#myPage">HOME</a></li>
         <li><a href="#about-me">ABOUT</a></li>
         <li><a href="#work-experience">EXPERIENCE</a></li>
-        <li><a href="#projects">PROJECTS</a></li>
+        <li><a href="#coding-projects">CODING PROJECTS</a></li>
         <li><a href="Irving-Martinez-Resume.pdf" download>DOWNLOAD RESUME</a></li>
       </ul>
     </div>
@@ -88,14 +88,14 @@
 </div>
 
 <!-- Container (Projects Section) -->
-<div id="projects" class="container">
+<div id="coding-projects" class="container">
     <a href="https://github.com/irvingmp6/kash" class="color-black">
         <div class="column">
             <div class="card">
                 <img class="grey-filter" src="budget.jpg" alt="Preview" style="width:96%">
                 <div class="card-container">
-                    <h5 class="color-orange"><strong>project kash</strong></h5>
-                    <p>CLI utility to import Chase bank activity (CSV files) into a database. Uses pandas and SQLLite3 to do the heavy lifting.</p>
+                    <h5 class="color-orange"><strong>GitHub Project: KASH</strong></h5>
+                    <p>Need a quick way to look up your payment history from all the banks you own? Kash is the perfect solution for that. With a few commands, you can import your data and query it all from the terminal. Kash uses pandas and SQLLite3 to do the heavy lifting.</p>
                 </div>
             </div>
         </div>
@@ -105,8 +105,8 @@
             <div class="card">
                 <img class="grey-filter" src="nodes.png" alt="Preview" style="width:100%">
                 <div class="card-container">
-                    <h5 class="color-orange"><strong>project sweb</strong></h5>
-                    <p>CLI Web Scraping tool used to feth nested URLs from search phrases. Uses Python's Beautiful Soup and Requests.</p>
+                    <h5 class="color-orange"><strong>GitHub Project: SWEB</strong></h5>
+                    <p>Ever wondered what personal information the internet has on your and your family? Sweb (pronounced "S-WEB") traverses the internet's search engines and reports all the URL pages of interest. Sweb uses Python's Beautiful Soup and Requests.</p>
                 </div>
             </div>
         </div>
@@ -116,8 +116,8 @@
             <div class="card">
                 <img class="grey-filter" src="under_construction.png" alt="Preview" style="width:100%">
                 <div class="card-container">
-                    <h5 class="color-orange"><strong>project pdffefs</strong></h5>
-                    <p>A CLI tool that allows you to merge multiple PDFs, split a large PDF, and convert images to PDF. Uses PyPDF4 and Pillow.</p>
+                    <h5 class="color-orange"><strong>GitHub Project: PDFFEFS</strong></h5>
+                    <p>Have you ever taken a screenshot of something and wished you can turn just it into a PDF? PDFFEFS (pronouced "PD-FEFS" and short for "PDF For Effin Sake") is a cool tool that allows you to merge multiple PDFs, split a large PDF, and convert images to PDF. PDFFEFS uses PyPDF4 and Pillow.</p>
                 </div>
             </div>
         </div>
@@ -149,6 +149,17 @@ $(document).ready(function(){
     }
   });
 })
+$(document).ready(function(){
+  // Close navbar when clicking outside of it
+  $(document).click(function(event) {
+    var clickover = $(event.target);
+    var $navbar = $(".navbar-collapse");   
+    var _opened = $navbar.hasClass("in");
+    if (_opened === true && !clickover.hasClass("navbar-toggle")) {      
+      $navbar.collapse('hide');
+    }
+  });
+});
 </script>
 
 </body>
