fixed work history

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     <li>Collaborate with Product Owners, DevOps, Architect, and other Engineers to discuss new solutions</li>
     <li>Train new team members on current systems ensuring they are self-reliant and resourceful</li>
 
-    <h5><span class="color-orange"><b>Senior QA Automation Engineer</b></span> @ Optum Financial</h5>
+    <h5><span class="color-orange"><b>QA Automation Engineer</b></span> @ Optum Financial</h5>
     <p>March 2019 &dash; May 2021</p>
     <li>Automated testing processes with Python/Selenium, the C#/.NET/SpecFLow framework, and bash scripting</li>
     <li>Performed end-to-end testing verifying Python and .NET applications, web services, as well as MySQL, MS
