--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav navbar-right">
         <li><a href="#myPage">HOME</a></li>
-        <li><a href="#about-me">ABOUT</a></li>
-        <li><a href="#work-experience">EXPERIENCE</a></li>
+        <li><a href="#about-me">ABOUT ME</a></li>
+        <li><a href="#work-experience">WORK EXPERIENCE</a></li>
         <li><a href="#coding-projects">CODING PROJECTS</a></li>
         <li><a href="Irving-Martinez-Resume.pdf" download>DOWNLOAD RESUME</a></li>
       </ul>
@@ -92,9 +92,9 @@
     <a href="https://github.com/irvingmp6/kash" class="color-black">
         <div class="column">
             <div class="card">
-                <img class="grey-filter" src="budget.jpg" alt="Preview" style="width:96%">
+                <img class="grey-filter" src="budget.jpg" alt="Preview" style="width:100%">
                 <div class="card-container">
-                    <h5 class="color-orange"><strong>GitHub Project: KASH</strong></h5>
+                    <h5 class="color-orange"><strong>Coding Project: KASH</strong></h5>
                     <p>Need a quick way to look up your payment history from all the banks you own? Kash is the perfect solution for that. With a few commands, you can import your data and query it all from the terminal. Kash uses pandas and SQLLite3 to do the heavy lifting.</p>
                 </div>
             </div>
@@ -105,7 +105,7 @@
             <div class="card">
                 <img class="grey-filter" src="nodes.png" alt="Preview" style="width:100%">
                 <div class="card-container">
-                    <h5 class="color-orange"><strong>GitHub Project: SWEB</strong></h5>
+                    <h5 class="color-orange"><strong>Coding Project: SWEB</strong></h5>
                     <p>Ever wondered what personal information the internet has on your and your family? Sweb (pronounced "S-WEB") traverses the internet's search engines and reports all the URL pages of interest. Sweb uses Python's Beautiful Soup and Requests.</p>
                 </div>
             </div>
@@ -116,7 +116,7 @@
             <div class="card">
                 <img class="grey-filter" src="under_construction.png" alt="Preview" style="width:100%">
                 <div class="card-container">
-                    <h5 class="color-orange"><strong>GitHub Project: PDFFEFS</strong></h5>
+                    <h5 class="color-orange"><strong>Coding Project: PDFFEFS</strong></h5>
                     <p>Have you ever taken a screenshot of something and wished you can turn just it into a PDF? PDFFEFS (pronouced "PD-FEFS" and short for "PDF For Effin Sake") is a cool tool that allows you to merge multiple PDFs, split a large PDF, and convert images to PDF. PDFFEFS uses PyPDF4 and Pillow.</p>
                 </div>
             </div>
