--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
     <a href="https://github.com/irvingmp6/kash" class="color-black">
         <div class="column">
             <div class="card">
-                <img class="grey-filter" src="budget.jpg" alt="Preview" style="width:100%">
+                <img class="grey-filter" src="graphs.jpg" alt="Preview" style="width:100%">
                 <div class="card-container">
                     <h5 class="color-orange"><strong>Coding Project: KASH</strong></h5>
                     <p>Need a quick way to look up your payment history from all the banks you own? Kash is the perfect solution for that. With a few commands, you can import your data and query it all from the terminal. Kash uses pandas and SQLLite3 to do the heavy lifting.</p>
@@ -114,7 +114,7 @@
     <a href="https://github.com/irvingmp6/pdffefs" class="color-black">
     <div class="column">
             <div class="card">
-                <img class="grey-filter" src="under_construction.png" alt="Preview" style="width:100%">
+                <img class="grey-filter" src="rearrange.png" alt="Preview" style="width:100%">
                 <div class="card-container">
                     <h5 class="color-orange"><strong>Coding Project: PDFFEFS</strong></h5>
                     <p>Have you ever taken a screenshot of something and wished you can turn just it into a PDF? PDFFEFS (pronouced "PD-FEFS" and short for "PDF For Effin Sake") is a cool tool that allows you to merge multiple PDFs, split a large PDF, and convert images to PDF. PDFFEFS uses PyPDF4 and Pillow.</p>
