added new project

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 <!-- Container (Work Experience Section) -->
 <div id="work-experience" class="bg-1">
   <div class="container">
-    <h5><span class="color-orange"><b>Software Engineer</b></span> @ Optum Financial</h5>
+    <h5><span class="color-orange"><b>Senior Software Engineer</b></span> @ Optum Financial</h5>
     <p>May 2021 &dash; Current</p>
     <li>Design and implement custom software solutions to onboard new clients to achieve revenue goals
       such as building or extending file parsers, provider remittance advices, and other interconnected modules</li>
@@ -89,7 +89,18 @@
 
 <!-- Container (Projects Section) -->
 <div id="coding-projects" class="container">
-    <a href="https://github.com/irvingmp6/kash" class="color-black">
+  <a href="https://mastercamachotigers.com" class="color-black">
+    <div class="column">
+        <div class="card">
+            <img class="grey-filter" src="website.png" alt="Preview" style="width:100%">
+            <div class="card-container">
+                <h5 class="color-orange"><strong>Martial Arts School Website</strong></h5>
+                <p>Website for a local business I developed with Python, Django, HTML, CSS, JavaScript.</p>
+            </div>
+        </div>
+    </div>
+</a>
+  <a href="https://github.com/irvingmp6/kash" class="color-black">
         <div class="column">
             <div class="card">
                 <img class="grey-filter" src="graphs.jpg" alt="Preview" style="width:100%">
